Fix Alignments

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15773,8 +15773,8 @@ div#featured-project-carousel {
 .client-card .main-content .inner .mnc {
     width: fit-content;
     padding: 5px 15px;
-    background: #e5e5e5;
-    color: #767676;
+    background: var(--color-primary);
+    color: #ffffff;
     box-shadow: var(--shadow-white-3);
     position: absolute;
     font-size: 14px;
